// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly renders the text elements 1`] = `
<Text
  style={
    Object {
      "fontFamily": "FanwoodText_400Regular",
      "fontSize": 16,
      "fontWeight": "normal",
      "marginBottom": 20,
    }
  }
>
  Text of the main persuasion.
</Text>
`;

exports[`correctly renders the text elements 2`] = `
<Text
  style={
    Object {
      "fontFamily": "Quattrocento_700Bold",
      "fontSize": 33,
      "fontWeight": "700",
      "marginBottom": 20,
    }
  }
>
  Title!
</Text>
`;

exports[`correctly renders the text elements 3`] = `
<Text
  style={
    Object {
      "fontFamily": "Quattrocento_400Regular",
      "fontSize": 26,
      "fontWeight": "normal",
      "marginBottom": 20,
    }
  }
>
  I am a subtitle.
</Text>
`;

exports[`correctly renders the text elements 4`] = `
<Text
  style={
    Object {
      "fontFamily": "Quattrocento_400Regular",
      "fontSize": 20,
      "fontWeight": "normal",
      "marginBottom": 20,
    }
  }
>
  Not quite a subtitle, but still more important than the rest.
</Text>
`;

exports[`correctly renders the text elements 5`] = `
<Text
  style={
    Object {
      "fontFamily": "FanwoodText_400Regular_Italic",
      "fontSize": 12.5,
      "fontWeight": "normal",
      "marginBottom": 20,
    }
  }
>
  I am a Caption!
</Text>
`;
